atualização com site de Mirella Raposo

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
       </div>
        <!-- mirella raposo -->
        <div class="alunaBox">
-        <a href="">
-          <img class="alunaImg" src="img-home/github.svg" alt="descrição da minha imagem" />
-          <p class="alunaName">Seu nome aqui</p>
+        <a href="alunas/mirella/index.html">
+          <img class="alunaImg" src="./alunas/mirella/img/octocat-mirella.png" alt="foto de Mirella sorrindo" />
+          <p class="alunaName">Mirella Raposo</p>
         </a>
       </div>
        <!-- pat barnabé -->
